--- a/UI/Client/ProviderEntry.xaml
+++ b/UI/Client/ProviderEntry.xaml
@@ -66,7 +66,7 @@
 			</TabItem>
 			
 			<TabItem Header="Membership">
-				<Grid>
+				<Grid Margin="5,5,5,5">
 					<Grid.ColumnDefinitions>
 						<ColumnDefinition Width="*"></ColumnDefinition>
 						<ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -78,7 +78,7 @@
 						<RowDefinition Height="*"></RowDefinition>
 					</Grid.RowDefinitions>
 
-					<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" Text="Member of:" VerticalAlignment="Center"/>
+					<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" Text="Client Membership:" VerticalAlignment="Center"/>
 
 					<ListBox Name="ListBoxClients" Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" IsTabStop="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ItemsSource="{Binding Path=Clients}">
 						<ListBox.ItemTemplate>
@@ -137,7 +137,7 @@
 						<RowDefinition Height="*"></RowDefinition>
 					</Grid.RowDefinitions>
 
-					<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" Text="Member of:" VerticalAlignment="Center"/>
+					<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" Text="Client Membership:" VerticalAlignment="Center"/>
 
 					<ListBox Name="ListBoxClientMembership" Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" IsTabStop="False" 
 							 ScrollViewer.HorizontalScrollBarVisibility="Disabled" ItemsSource="{Binding Path=Clients}" SelectionChanged="ListBoxClientMembership_SelectionChanged">
@@ -150,7 +150,7 @@
 						</ListBox.ItemTemplate>
 					</ListBox>
 
-					<TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="Distributions:" VerticalAlignment="Center"/>
+					<TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="Distribute To:" VerticalAlignment="Center"/>
 
 					<ListBox Name="ListBoxDistributionSelection" Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" IsTabStop="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ItemsSource="{Binding Path=PhysicianClientDistributionViewList}">
 						<ListBox.ItemTemplate>
@@ -167,22 +167,10 @@
 						<Button Name="ButtonRemoveFromDistribution" Width="70" Height="30" Margin="5,5,5,5" Click="ButtonRemoveFromDistribution_Click">Remove ></Button>
 					</StackPanel>
 
-					<Grid Grid.Column="3" Grid.Row="0">
-						<Grid.ColumnDefinitions>
-							<ColumnDefinition Width="Auto"></ColumnDefinition>
-							<ColumnDefinition Width="*"></ColumnDefinition>
-						</Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="3" Grid.Row="0" Margin="2,2,2,2" Text="Distribution Options:" />					
 
-						<Grid.RowDefinitions>
-							<RowDefinition Height="Auto"></RowDefinition>
-						</Grid.RowDefinitions>
-
-						<TextBlock Grid.Column="0" Grid.Row="0" Margin="5" Text="Client Name:" />
-						<!--<TextBox Name="TextBoxClientDistributionName" Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Stretch" TextChanged="TextBoxClientDistributionName_TextChanged" />
--->
-					</Grid>
-
-					<ListBox Name="ListBoxNewDistributionSelection" Grid.Column="3" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" IsTabStop="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ItemsSource="{Binding Path=Clients}">
+					<ListBox Name="ListBoxNewDistributionSelection" Grid.Column="3" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" IsTabStop="False" 
+                             ScrollViewer.HorizontalScrollBarVisibility="Disabled" ItemsSource="{Binding Path=Clients}">
 						<ListBox.ItemTemplate>
 							<DataTemplate>
 								<StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
