--- a/UI/Client/ClientEntryV2.xaml
+++ b/UI/Client/ClientEntryV2.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="YellowstonePathology.UI.Client.ClientEntryV2"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Client Entry" Height="700" Width="700"
+        Title="Client Entry" Height="600"  Width="600"
 		WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
 
 	<Grid>
@@ -69,10 +69,10 @@
 					<CheckBox Grid.Column="1" Grid.Row="4" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="{Binding Path=Client.LongDistance}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="5" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Telephone:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="5" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.Telephone}" />
+					<TextBox Grid.Column="1" Grid.Row="5" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.Telephone,Converter={StaticResource PhoneNumberConverter}}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="6" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Fax:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="6" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.Fax}" />
+					<TextBox Grid.Column="1" Grid.Row="6" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.Fax,Converter={StaticResource PhoneNumberConverter}}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="7" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Contact Name:</TextBlock>
 					<TextBox Grid.Column="1" Grid.Row="7" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.ContactName}" />
@@ -82,40 +82,83 @@
 
 					<TextBlock Grid.Column="0" Grid.Row="9" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Distribution Type:</TextBlock>
 					<ComboBox Grid.Column="1" Grid.Row="9" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=DistributionTypeList}"
-							  SelectedValue="{Binding Path=Client.DistributionType}" SelectedValuePath="Value" DisplayMemberPath="Name" />
+							  SelectedValue="{Binding Path=Client.DistributionType}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="10" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Facility Type:</TextBlock>
 					<ComboBox Grid.Column="1" Grid.Row="10" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=FacilityTypes}"
 							  SelectedValue="{Binding Path=Client.FacilityType}" />
 
-					<TextBlock Grid.Column="0" Grid.Row="11" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Inactive:</TextBlock>
-					<CheckBox Grid.Column="1" Grid.Row="11" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="{Binding Path=Client.Inactive}" />
+					<TextBlock Grid.Column="0" Grid.Row="11" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Billing Rule Set:</TextBlock>
+					<ComboBox Grid.Column="1" Grid.Row="11" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=BillingRuleSetCollection}"
+							  SelectedValue="{Binding Path=Client.BillingRuleSetId}" SelectedValuePath="BillingRuleSetIdOld" DisplayMemberPath="BillingRuleSetName" />
 
-					<TextBlock Grid.Column="0" Grid.Row="12" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Flow Client:</TextBlock>
-					<CheckBox Grid.Column="1" Grid.Row="12" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="{Binding Path=Client.FlowClient}" />
+					<TextBlock Grid.Column="0" Grid.Row="12" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Billing Rule Set 2:</TextBlock>
+					<ComboBox Grid.Column="1" Grid.Row="12" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=BillingRuleSetCollection}"
+							  SelectedValue="{Binding Path=Client.BillingRuleSetId2}" SelectedValuePath="BillingRuleSetId" DisplayMemberPath="BillingRuleSetName" />
 
-					<TextBlock Grid.Column="0" Grid.Row="13" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Close Rule Applies:</TextBlock>
-					<CheckBox Grid.Column="1" Grid.Row="13" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="{Binding Path=Client.CloseRuleApplies}" />
+					<TextBlock Grid.Column="0" Grid.Row="13" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Inactive:</TextBlock>
+					<CheckBox Grid.Column="1" Grid.Row="13" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="{Binding Path=Client.Inactive}" />
 
-					<TextBlock Grid.Column="0" Grid.Row="14" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >EOM Client:</TextBlock>
-					<CheckBox Grid.Column="1" Grid.Row="14" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="{Binding Path=Client.EOMClient}" />
-
-					<TextBlock Grid.Column="0" Grid.Row="15" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Show physicians on requisition:</TextBlock>
-					<CheckBox Grid.Column="1" Grid.Row="15" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="{Binding Path=Client.ShowPhysiciansOnRequisition}" />
+					<TextBlock Grid.Column="0" Grid.Row="14" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Show physicians on requisition:</TextBlock>
+					<CheckBox Grid.Column="1" Grid.Row="14" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="{Binding Path=Client.ShowPhysiciansOnRequisition}" />
 				</Grid>
 			</TabItem>
 			
 			<TabItem Header="Membership">
-				<ListBox Name="ListBoxPhysicians" Margin="10" HorizontalAlignment="Stretch" BorderThickness="0" IsTabStop="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-						 ItemsSource="{Binding Path=Physicians}">
-					<ListBox.ItemTemplate>
-						<DataTemplate>
-							<StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
-								<TextBlock Margin="2" Text="{Binding Path=DisplayName}" />
-							</StackPanel>
-						</DataTemplate>
-					</ListBox.ItemTemplate>
-				</ListBox>
+				<Grid>
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="*"></ColumnDefinition>
+						<ColumnDefinition Width="Auto"></ColumnDefinition>
+						<ColumnDefinition Width="*"></ColumnDefinition>
+					</Grid.ColumnDefinitions>
+
+					<Grid.RowDefinitions>
+						<RowDefinition Height="Auto"></RowDefinition>
+						<RowDefinition Height="*"></RowDefinition>
+					</Grid.RowDefinitions>
+
+					<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Left" VerticalAlignment="Center" Text="Members:" />
+
+					<ListBox Name="ListBoxPhysicians" Grid.Column="0" Grid.Row="1" Margin="10" HorizontalAlignment="Stretch" BorderThickness="1" IsTabStop="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+							 ItemsSource="{Binding Path=Physicians}">
+						<ListBox.ItemTemplate>
+							<DataTemplate>
+								<StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
+									<TextBlock Margin="2" Text="{Binding Path=DisplayName}" />
+								</StackPanel>
+							</DataTemplate>
+						</ListBox.ItemTemplate>
+					</ListBox>
+
+					<Grid Grid.Column="2" Grid.Row="0">
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="Auto"></ColumnDefinition>
+							<ColumnDefinition Width="*"></ColumnDefinition>
+						</Grid.ColumnDefinitions>
+
+						<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center" Text="Provider Name (last, first):" />
+						<TextBox Grid.Column="1" Grid.Row="0" Name="TextBoxProviderName" Margin="2,2,2,2" HorizontalAlignment="Stretch" VerticalContentAlignment="Center" KeyUp="TextBoxProviderName_KeyUp" />
+
+					</Grid>
+
+					<StackPanel Grid.Column="1" Grid.Row="1" Orientation="Vertical" Margin="2,2,2,2" VerticalAlignment="Center">
+						<Button Name="ButtonAddToClient" Width="70" Height="30" Margin="5,5,5,5" Click="ButtonAddToClient_Click">&lt; Add</Button>
+						<Button Name="ButtonRemoveFromClient" Width="70" Height="30" Margin="5,5,5,5" Click="ButtonRemoveFromClient_Click">Remove ></Button>
+					</StackPanel>
+
+					<ListBox Name="ListBoxAvailableProviders" Grid.Column="2" Grid.Row="1" Margin="10" HorizontalAlignment="Stretch" BorderThickness="1" IsTabStop="False"
+							  ScrollViewer.HorizontalScrollBarVisibility="Disabled" ItemsSource="{Binding Path=PhysicianCollection}">
+						<ListBox.ItemTemplate>
+							<DataTemplate>
+								<StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
+									<TextBlock Margin="2" Text="{Binding Path=DisplayName}" />
+								</StackPanel>
+							</DataTemplate>
+						</ListBox.ItemTemplate>
+					</ListBox>
+
+				</Grid>
+
 			</TabItem>
 		</TabControl>
 		
