--- a/UI/Test/HPV1618ResultPage.xaml
+++ b/UI/Test/HPV1618ResultPage.xaml
@@ -114,6 +114,8 @@
 						<RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
@@ -133,17 +135,20 @@
 					<TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold">HPV 18 Final Result:</TextBlock>
 					<TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.HPV18Result}" HorizontalAlignment="Stretch" IsEnabled="False"/>
 
-					<TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">Interpretation:</TextBlock>
-					<TextBox Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="4" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Interpretation}" TextWrapping="Wrap" />
+                    <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">Comment:</TextBlock>
+                    <TextBox Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="4" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Comment}" TextWrapping="Wrap" />
+                    
+                    <TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">Interpretation:</TextBlock>
+					<TextBox Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="6" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Interpretation}" TextWrapping="Wrap" />
 
-					<TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">Method:</TextBlock>
-					<TextBox Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="6" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Method}" TextWrapping="Wrap" />
+					<TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">Method:</TextBlock>
+					<TextBox Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="8" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Method}" TextWrapping="Wrap" />
 
-					<TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">References:</TextBlock>
-					<TextBox Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="8" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.References}" TextWrapping="Wrap" />
+					<TextBlock Grid.Column="0" Grid.Row="9" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">References:</TextBlock>
+					<TextBox Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="10" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.References}" TextWrapping="Wrap" />
 
-					<TextBlock Grid.Column="0" Grid.Row="9" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Left" FontWeight="Bold">Preliminary Result:</TextBlock>
-					<ListView Name="ListViewPanelOrder" Grid.Column="0" Grid.Row="10" Grid.ColumnSpan="2" Margin="2,2,2,2" ItemsSource="{Binding Path=PanelSetOrder.PanelOrderCollection}" HorizontalAlignment="Stretch" Height="70">
+					<TextBlock Grid.Column="0" Grid.Row="11" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Left" FontWeight="Bold">Preliminary Result:</TextBlock>
+					<ListView Name="ListViewPanelOrder" Grid.Column="0" Grid.Row="12" Grid.ColumnSpan="2" Margin="2,2,2,2" ItemsSource="{Binding Path=PanelSetOrder.PanelOrderCollection}" HorizontalAlignment="Stretch" Height="70">
 						<ListView.View>
 							<GridView>
 								<GridViewColumn Header="Ordered" DisplayMemberBinding="{Binding Path=OrderTime, Converter={StaticResource ShortDateTimeConverter}}" Width="120"/>
@@ -154,7 +159,7 @@
 						</ListView.View>
 					</ListView>					
 
-                    <Grid Grid.Column="0" Grid.Row="11" Grid.ColumnSpan="2">
+                    <Grid Grid.Column="0" Grid.Row="13" Grid.ColumnSpan="2">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"></ColumnDefinition>
                             <ColumnDefinition Width="*"></ColumnDefinition>
