--- a/UI/Gross/DictationTemplatePage.xaml
+++ b/UI/Gross/DictationTemplatePage.xaml
@@ -23,11 +23,11 @@
             <TextBlock Margin="2,2,2,2" FontSize="20" FontWeight="Bold" Text="Template:" HorizontalAlignment="Left"></TextBlock>
             <TextBlock  Margin="2,2,2,2" Text="{Binding Path=DictationTemplate.TemplateName}" FontSize="20"></TextBlock>
         </StackPanel>
-        <TextBox Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Path=DictationTemplate.Text}" FontSize="20"></TextBox>
+        <TextBox Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Path=GrossDictation.Preamble}" FontSize="20"></TextBox>
                 
         
-        <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" FontSize="20" FontWeight="Bold" Text="Paragraph:" HorizontalAlignment="Left"></TextBlock>        
-        <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Path=DictationTemplate.TranscribedText}" FontSize="20"></TextBox>
+        <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" FontSize="20" FontWeight="Bold" Text="Paragraph:" HorizontalAlignment="Left"></TextBlock>
+        <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Path=GrossDictation.Preamble}" FontSize="20"></TextBox>
 
         
         <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" FontSize="20" FontWeight="Bold" Text="Phrases To Speak:" HorizontalAlignment="Left"></TextBlock>                
